--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -30,9 +30,9 @@
 </ul>
           </div>
           <div class="footer__feedback">
-            <div class="footer__title">This site uses affiliate links. For more information, see my disclosure <a href="#">here</a></div>
+            <div class="footer__title">This site uses brand affiliate links.</div>
 
-            <div class="footer__feedback-notice">This site is protected by reCAPTHCHA and the <a href="#" target="_blank">Google Privacy Policy</a> and <a href="#" target="_blank">Terms of Service apply</a>.</div>
+            <div class="footer__feedback-notice">For more information, see my <a href="#" target="_blank">Affiliate Disclosure</a> and view our <a href="#" target="_blank">Terms of Service</a>.</div>
           </div>
           <div class="footer__bottom">
             <div class="footer__copyright">© IWM LLC 2025. All Rights Resevered. A TABLE books pro™ trademark.</div>
