--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -166,7 +166,7 @@ body {
   white-space: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  background-color: #f7f7f7;
+  background-color:  ;
   -webkit-font-smoothing: antialiased;
   -moz-font-smoothing: antialiased;
   -o-font-smoothing: antialiased;
@@ -218,7 +218,7 @@ body.no-grow main {
 
 main {
   position: relative;
-  background-color: #f7f7f7;
+  background-color:  ;
   z-index: 1;
   -webkit-box-flex: 1;
       -ms-flex-positive: 1;
@@ -3753,7 +3753,7 @@ a:hover, a:focus {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: #f7f7f7;
+  background-color:  ;
   -webkit-transform: translateX(-100%);
           transform: translateX(-100%);
   z-index: 2;
@@ -10576,7 +10576,7 @@ a:hover, a:focus {
 /* 5.3 Wrapper for header and main content */
 .leftward-wrapper {
   position: relative;
-  background-color: #f7f7f7;
+  background-color:  ;
   z-index: 1;
 }
 
